-----------------------
PVFS2 Release ChangeLog
-----------------------


pvfs2-0.6.3pre1
===============
- 


pvfs2-0.6.2
===========
- updated documentation for dist-simple-stripe.c and modified
  the basic distribution to use a single data file object.
- fixed error reporting in pvfs2-server that didn't understand pvfs2
  specific error codes
- extended request scheduler to allow operations to pass through
  without being scheduled (and allow the noop operations to work like
  this)
- disabled the (unused) device interface on server builds, reducing
  server run-time threads by one
- bmi optimizations: avoid polling in test calls if operations are
  complete, or no operations are complete but there are unexpected
  operations ready to be serviced
- extended the pvfs2-mkspace tool to be able to work with data and
  meta handle ranges separately (also extended the internal interfaces
  as necessary for this functionality)
- fixed bug in mkspace that could create the root directory dirent
  object in a non-meta handle range
- added client side attribute type checking that avoids contacting
  servers if we've determined that the operation we're about to
  perform cannot be performed on an object of the type we were told to
  work on.  e.g., a readdir operation will not be issued to the server
  if the getattr reports that the object we want to readdir on is not
  a directory.  most sysint operations now have this checking in place
- fixed crash bug on the server crdirent operation if passed a
  non-directory object type
- fixed race condition triggered when pvfs2-server is getting many
  more incoming operations than it has posted unexpected msgs for
- increase the default number of posted unexpected msgs by the server
- properly re-integrate and simplify the usage of the mmap-ra-cache,
  which wasn't working properly after the pvfs2-client-core re-write
- fixed crash bug on the server due to an unexpected error code coming